# cmake-cython-example

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/: Doxyfile.in  foo-config.cmake.in
extras/python-bindings/: .coveragerc  .editorconfig  .gitignore  LICENSE  README.md  setup.py
extras/python-bindings/docs/: conf.py  index.rst
extras/python-bindings/src/foo/: .gitignore  __init__.py  c_foo.pxd  foo_ext.pxd  foo_ext.pyx
extras/python-bindings/tests/: test_foo.py
extras/python-bindings/util/: coverage-report.py
include/: foo.h
src/: foo.c
src/native/: foo_impl.c
src/python/: .gitignore  README.md  foo_impl.cpp  foo_impl.pyx
tests/: foo-tests-main.cpp  foo-tests.cpp
